# SuperKeyHub

./: .gitignore  SuperKeyHUB.spec  app_updater.py  build.py  config_manager.py  custom_key_manager.py  finsh_data_sender.py  firmware_updater.py  hw_monitor.py  instal.bat  installer.nsi  led_controller.py  main.py  power_monitor.py  pyproject.toml  readme.md  requirements.txt  serial_assistant.py  setup_dependencies.py  stock_api.py  system_tray.py  weather_api.py
.github/: dependabot.yml
.github/workflows/: build.yml  build_and_sync.yml  ci.yml
assets/: app.icns
