[project]
name = "superkeyhub"
version = "1.6.1"
description = "SuperKey Hardware Monitor - Cross-platform hardware monitoring tool"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "xiebowen", email = "xiebowen1@outlook.com" },
]
keywords = ["hardware", "monitor", "serial", "weather", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flet[all]>=0.21.0",      # 使用 flet[all] 包含桌面组件
    "psutil>=5.9.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pystray>=0.19.0",
]

[project.optional-dependencies]
windows = [
    "pythonnet>=3.0.0",
    "wmi>=1.5.1",
]

[project.scripts]
superkeyhub = "main:main"

[project.gui-scripts]
superkeyhub-gui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-pillow>=10.0.0",
    "pip>=24.0",              # 显式包含 pip
]


[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B008",   # function call in default argument
    "SIM108", # use ternary operator
    "N806",   # variable in function should be lowercase
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
    "N815",   # mixedCase variable in class scope
    "UP007",  # Use X | Y for type annotations (keep Optional for compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["main", "hw_monitor", "serial_assistant", "weather_api", "config_manager", "custom_key_manager", "system_tray", "finsh_data_sender"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
]